<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/doodle"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/doodle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/gradient_black"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/gradient_black"
        android:layout_marginTop="-200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doodle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:fontFamily="@font/spoti_bold"
        android:textSize="44sp"
        android:layout_marginTop="-140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradient_black"/>

    <EditText
        android:id="@+id/input_one"
        android:inputType="numberDecimal|numberSigned"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/doodle"
        app:cornerRadius="8dp"
        android:hint="@string/hint_input1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradient_black"/>

    <EditText
        android:id="@+id/input_two"
        android:inputType="numberDecimal|numberSigned"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/doodle"
        app:cornerRadius="8dp"
        android:hint="@string/hint_input2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_one"/>

    <LinearLayout
        android:id="@+id/linear_one"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_two">

        <Spinner
            android:id="@+id/calc_method"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:entries="@array/calculate_method"
            android:hint="@string/hint_spinner"
            android:spinnerMode="dropdown"
            android:layout_marginStart="-5dp"
            android:tooltipText="Select Operation" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/doodle"
            android:text="@string/submit_button"/>
    </LinearLayout>

    <TextView
        android:id="@+id/texthint_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/result_title"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_one"/>

    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/result_empty"
        android:textAlignment="center"
        android:textSize="56sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texthint_result"/>

</androidx.constraintlayout.widget.ConstraintLayout>